--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Mamon</h1>
+<h1>VMoroz.by</h1>
 <p>Сайт находится на реконструкции!</p>
 </body>
 </html>
