--- a/index.html
+++ b/index.html
@@ -36,9 +36,20 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Мороз Валентина</h1>
-									<p>Сертифицированный коуч ICU</p>
-								</header>
+<h2>Валентина Мороз</h2>
+<h3>RP-специалист и сертифицированный коуч ICU</h3>
+<small>
+• Подготовка и проведение PR-компаний<br>
+• Копирайт для сайта организации<br>
+• Фирменный стиль и имидж для организации<br>
+• Межличностные отношения<br>
+• Личная эффективность<br>
+• Разработка личного и профессионального стиля<br>
+</small>
+<a href="mailto:info@vmoroz.by">info@vmoroz.by</a> <a href="www.facebook.com/groups/673211609457918/">Facebook</a><br>
++375 29 7564883   +375 44 7484883<br>
+Сайт находится на реконструкции
+</header>
 								<a href="#work" class="jumplink pic">
 									
 									<img src="images/me.jpg" alt="" />
